--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
     <div class="page select" id="select">
         <div class="div">
             <div class="player-details">
-                <h3 class="paragraph">Username:</h3>
                 <input id="username" class="username" type="text">
                 <input onclick="changeUserName()" class="change" type="button" value="Change">
             </div>
             <div class="playerResults">
                 <p id="lblUserResults">The player results will appear here</p>
             </div>
-            <h1 class="heading">Select your opponent</h1>
+            <h1 class="heading" style="font-size: 08em">Select your opponent</h1>
             <div class="select-player">
                 <div onclick="selectOpponent('Paris Makhadi')" class="player">
                     <img src="./images/cards/child.jpg" alt="" />
